# taurob_simulation

./: Dockerfile  Readme.md  build.sh  ros_entrypoint.sh  run_docker.bat  run_docker.sh  run_docker_from_hub.sh
hooks/: build
install/control/follow_human/: CMakeLists.txt  Readme.md  package.xml
install/control/follow_human/cfg/: follow_human.cfg
install/control/follow_human/config/: config.yaml
install/control/follow_human/doc/: manifest.yaml
install/control/follow_human/doc/html/: annotated.html  bug.html  classes.html  classfollow__human-members.html  classfollow__human.html  dir_000001_000002.html  dir_474ee603aaa19c9fdb2102b4c137b283.html  dir_474ee603aaa19c9fdb2102b4c137b283_dep.map  dir_474ee603aaa19c9fdb2102b4c137b283_dep.md5  dir_7dbb455896673dfea0a4406bfa7fd47b.html  dir_bb7fcd0fcbc84d7a17cc322fba94f4b9.html  dir_dc3a37fe630eb6406efcb17b2dff11e4.html  dir_dc3a37fe630eb6406efcb17b2dff11e4_dep.map  dir_dc3a37fe630eb6406efcb17b2dff11e4_dep.md5  files.html  follow__human_8cpp.html  follow__human_8cpp__incl.map  follow__human_8cpp__incl.md5  follow__human_8cpp_source.html  follow__human_8hpp.html  follow__human_8hpp__dep__incl.map  follow__human_8hpp__dep__incl.md5  follow__human_8hpp__incl.map  follow__human_8hpp__incl.md5  follow__human_8hpp_source.html  functions.html  functions_func.html  functions_vars.html  globals.html  globals_func.html  graph_legend.html  index-msg.html  index.html  main_8cpp.html  main_8cpp__incl.map  main_8cpp__incl.md5  main_8cpp_source.html  pages.html  todo.html
install/control/follow_human/include/follow_human/: follow_human.hpp
install/control/follow_human/launch/: follow_human.launch
install/control/follow_human/src/: follow_human.cpp  main.cpp
install/mapping/octomap_taurob/: CMakeLists.txt  Readme.md  package.xml
install/mapping/octomap_taurob/launch/: octomap_mapping.launch
install/mapping/using_markers/: CMakeLists.txt  Readme.md  package.xml
install/mapping/using_markers/src/: basic_shapes.cpp  gaussian.py
install/navigation/comehome_pose_tf2/: Readme.md
install/navigation/comehome_pose_tf2/launch/: comehome_tf_transform.launch
install/navigation/comehome_pose_tf2/script/: comehome_tf_transform.py
install/navigation/mbf_tools/: source
install/navigation/taurob_explorer/: CMakeLists.txt  Readme.md  package.xml
install/navigation/taurob_explorer/cfg/: explorer.cfg
install/navigation/taurob_explorer/config/: config.yaml
install/navigation/taurob_explorer/launch/: taurob_explorer.launch
install/navigation/taurob_explorer/src/: main.py  setup.py
install/navigation/taurob_explorer/src/taurob_explorer/: rrt.py
install/navigation/taurob_navigation/: CMakeLists.txt  package.xml
install/navigation/taurob_navigation/configuration/: controllers.yaml  costmap_common_params.yaml  local_costmap_params.yaml
install/navigation/taurob_navigation/launch/: taurob_navigation.launch
install/navigation/taurob_navigation/script/: taurob_smach.py  taurob_smach_replan.py
install/perception/detection/: CMakeLists.txt  Readme.md  package.xml
install/perception/detection/cfg/: detection.cfg
install/perception/detection/config/: cam_config.yaml  detection.yaml
install/perception/detection/include/detection/: calc_pose.hpp
install/perception/detection/launch/: clicked_point_to_csv.launch  detection.launch  detection_xterm.launch
install/perception/detection/src/: calc_pose.cpp  clicked_point_to_csv.py  human_blender.dae  human_blender.stl  main.cpp  sub_octo.cpp  tafel.stl
install/perception/ground_occupancy/: CMakeLists.txt  Readme.md  package.xml
install/perception/ground_occupancy/launch/: debug.launch
install/perception/ground_occupancy/src/: ground_occupancy.cpp
install/perception/maploader/: CMakeLists.txt  Readme.md  package.xml
install/perception/maploader/action/: LoadMap.action
install/perception/maploader/launch/: bag.launch  ekf_test.launch  example_with_gps.launch  maploader_with_bag.launch  tau_bringup.launch
install/perception/maploader/src/: actionserver.py  client.py  serviceserver.py
install/perception/maploader/srv/: MarkMap.srv
install/perception/openpose_testing/: CMakeLists.txt  README.md  package.xml
install/perception/openpose_testing/include/: BagOpener.h  FrameHandler.h  ImageSaver.h
install/perception/openpose_testing/launch/: publish_pic.launch  save_pic.launch
install/perception/openpose_testing/msg/: enterPress.msg
install/perception/openpose_testing/src/: BagOpener.cpp  FrameHandler.cpp  ImageSaver.cpp  getOpenPoseData.cpp  get_images.cpp  publish_picture.cpp  take_picture.cpp
install/perception/transform_point_cloud/: CMakeLists.txt  package.xml
install/perception/transform_point_cloud/launch/: test.launch
install/perception/transform_point_cloud/src/: transform_point_cloud.cpp  transform_point_cloud.cpp_backup
install/taurob_tracker_simulation/: README.md
install/taurob_tracker_simulation/taurob_tracker_bringup/launch/: bringup.launch  default.rviz
install/taurob_tracker_simulation/taurob_tracker_bringup/scripts/: start_sim.sh
install/taurob_tracker_simulation/taurob_tracker_control/config/: taurob_tracker_control.yaml
install/taurob_tracker_simulation/taurob_tracker_control/launch/: taurob_tracker_control.launch
install/taurob_tracker_simulation/taurob_tracker_description/: CMakeLists.txt  package.xml
install/taurob_tracker_simulation/taurob_tracker_description/launch/: taurob_tracker_rviz.launch
install/taurob_tracker_simulation/taurob_tracker_description/urdf/: VLP-16.urdf.xacro  taurob_laser_scanner.gazebo  taurob_laser_scanner.xacro  taurob_tracker.gazebo  taurob_tracker_flipper.xacro  taurob_tracker_flipper_dae.xacro  taurob_tracker_flipper_dae_og.xacro  taurob_tracker_flipper_indoor.xacro  taurob_tracker_flipper_outdoor.xacro
install/taurob_tracker_simulation/taurob_tracker_gazebo/launch/: taurob_tracker_indoor_world.launch  taurob_tracker_outdoor_world.launch
install/taurob_tracker_simulation/taurob_tracker_gazebo/worlds/Indoor_Worlds/: akw.world  akw_with_objects.world
(+3 files in other folders)
